--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
         <div class="hud-card" id="card-zoom">
             <svg class="hud-icon" viewBox="0 0 24 24">
                 <path
-                    d="M15.5,14h-0.79l-0.28-0.27C15.41,12.59,16,11.11,16,9.5C16,5.91,13.09,3,9.5,3S3,5.91,3,9.5S5.91,16,9.5,16 c1.61,0,3.09-0.59,4.23-1.57l0.27,0.28v0.79l5,4.99L20.49,19L15.5,14z M9.5,14C7.01,14,5,11.99,5,9.5S7.01,5,9.5,5S14,7.01,14,9.5 S11.99,14,9.5,14z" />
-                <path d="M12,10h-2v2H9v-2H7V9h2V7h1v2h2V10z" />
+                    d="M21.71,20.29l-5.01-5.01C17.54,14.03,18,12.57,18,11c-0.01-3.87-3.14-7-7-7c-3.86,0-7,3.13-7,7c0,3.86,3.13,7,7,7 c1.57,0,3.03-0.46,4.28-1.3l5.01,5.01L21.71,20.29z M11,16c-2.76,0-5-2.24-5-5s2.24-5,5-5s5,2.24,5,5S13.76,16,11,16z" />
+                <path d="M13,10h-2v2h-2v-2H7V8h2V6h2v2h2V10z" />
             </svg>
-            <span>Pinch & Move Up/Down</span>
+            <span>Spread to Zoom</span>
         </div>
     </div>
 
@@ -209,14 +209,14 @@
         let isCameraRunning = false;
 
         // Gesture Logic State
-        let pinchStartY = null;
-        let pinchStartZoom = null;
         let panStart = null;
+        let previousPinchDist = null;
 
         // Smoothing
         const SMOOTHING_FACTOR = 0.15;
         let smoothX = 0;
         let smoothY = 0;
+        let smoothPinchDist = null;
 
         // DOM Elements
         const videoElement = document.getElementById('input_video');
@@ -303,7 +303,7 @@
 
         function resetGestures() {
             panStart = null;
-            pinchStartY = null;
+            previousPinchDist = null;
             cardPan.classList.remove('active');
             cardZoom.classList.remove('active');
         }
@@ -316,56 +316,29 @@
             smoothX += (pointer.x - smoothX) * SMOOTHING_FACTOR;
             smoothY += (pointer.y - smoothY) * SMOOTHING_FACTOR;
 
-            // 2. Detect PINCH (Thumb tip 4 to Index tip 8)
-            const pinchDist = calculateDistance(landmarks[4], landmarks[8]);
-            const isPinching = pinchDist < 0.05;
+            // 2. Measure Distances
+            // Pinch Distance (Thumb Tip 4 - Index Tip 8)
+            const rawPinchDist = calculateDistance(landmarks[4], landmarks[8]);
 
-            // 3. Detect FIST (Simplified)
-            // Check if fingertips 12 (Middle), 16 (Ring), 20 (Pinky) are close to wrist (0)
+            // Smooth the pinch distance
+            if (smoothPinchDist === null) smoothPinchDist = rawPinchDist;
+            smoothPinchDist += (rawPinchDist - smoothPinchDist) * 0.15;
+
+            // Fist Logic: Check if fingers are curled
             const middleTipDist = calculateDistance(landmarks[12], landmarks[0]);
             const ringTipDist = calculateDistance(landmarks[16], landmarks[0]);
-
-            // Thresholds
-            const FIST_THRESHOLD = 0.35; // If fingers are curled in
-            const isFist = (middleTipDist < FIST_THRESHOLD && ringTipDist < FIST_THRESHOLD) && !isPinching;
+            const FIST_THRESHOLD = 0.35;
+            const isFist = (middleTipDist < FIST_THRESHOLD && ringTipDist < FIST_THRESHOLD);
 
             // --- STATE MACHINE ---
 
-            if (isPinching) {
-                // *** ZOOM MODE ***
-                cardZoom.classList.add('active');
-                cardPan.classList.remove('active');
-
-                // Disengage Pan
-                panStart = null;
-
-                if (pinchStartY === null) {
-                    // Start Zoom Session
-                    pinchStartY = smoothY;
-                    pinchStartZoom = map.getZoom();
-                } else {
-                    // Ongoing Zoom
-                    // Calculate vertical delta
-                    const dy = smoothY - pinchStartY;
-                    // Sensitivity
-                    const zoomSensitivity = 5.0;
-                    // Move DOWN (positive dy) -> Zoom OUT? Or In?
-                    // User Request: "Logical". 
-                    // Pulling Down = Pulling closer = Zoom In? 
-                    // Pushing Up = Pushing away = Zoom Out?
-                    // Let's implement: Down = Zoom In. Up = Zoom Out.
-
-                    const newZoom = pinchStartZoom + (dy * zoomSensitivity);
-                    map.setZoom(newZoom);
-                }
-
-            } else if (isFist) {
+            if (isFist) {
                 // *** PAN MODE ***
                 cardPan.classList.add('active');
                 cardZoom.classList.remove('active');
 
-                // Disengage Zoom
-                pinchStartY = null;
+                // Reset Zoom
+                previousPinchDist = null;
 
                 if (panStart === null) {
                     panStart = { x: smoothX, y: smoothY };
@@ -377,18 +350,37 @@
                     if (Math.abs(dx) > 0.001 || Math.abs(dy) > 0.001) {
                         const width = window.innerWidth;
                         const height = window.innerHeight;
-                        // Mapbox panBy uses pixels. 
-                        // Hand moves Right (-dx because mirror) -> Map moves Right.
                         map.panBy([-dx * width, -dy * height], { animate: false });
-
-                        // Update start pos to avoid acceleration 
                         panStart = { x: smoothX, y: smoothY };
                     }
                 }
 
             } else {
-                // *** HOVER / IDLE ***
-                resetGestures();
+                // *** ZOOM MODE (Spread/Pinch) ***
+                cardPan.classList.remove('active');
+                cardZoom.classList.add('active');
+
+                // Disengage Pan
+                panStart = null;
+
+                if (previousPinchDist === null) {
+                    previousPinchDist = smoothPinchDist;
+                } else {
+                    const delta = smoothPinchDist - previousPinchDist;
+
+                    // Deadzone to prevent micro-jitters
+                    if (Math.abs(delta) > 0.003) {
+                        // Spread (positive delta) -> Zoom In (+)
+                        // Close (negative delta) -> Zoom Out (-)
+                        const zoomSensitivity = 6.0; // Adjust for speed
+                        const zoomChange = delta * zoomSensitivity;
+
+                        map.setZoom(map.getZoom() + zoomChange);
+
+                        // Update previous to track relative change
+                        previousPinchDist = smoothPinchDist;
+                    }
+                }
             }
         }
 
